<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/paddingTeam"
                android:text="@string/teamA"
                android:textColor="@color/aBlue"
                android:textSize="@dimen/teamSize" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="@dimen/scorePaddingBottom"
                android:text="@string/intScore"
                android:textColor="@color/black"
                android:textSize="@dimen/scoreSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addFiveForTeamA"
                android:text="@string/try5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addTwoForTeamA"
                android:text="@string/transfo2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addThreeForTeamA"
                android:text="@string/dropkick3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addPenaltyForTeamA"
                android:text="@string/penalty3" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/viewMargin"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/paddingTeam"
                android:text="@string/teamB"
                android:textColor="@color/bPurple"
                android:textSize="@dimen/teamSize" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="@dimen/scorePaddingBottom"
                android:text="@string/intScore"
                android:textColor="@color/black"
                android:textSize="@dimen/scoreSize" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addFiveForTeamB"
                android:text="@string/try5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addTwoForTeamB"
                android:text="@string/transfo2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addThreeForTeamB"
                android:text="@string/dropkick3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom"
                android:layout_marginLeft="@dimen/marginLR"
                android:layout_marginRight="@dimen/marginLR"
                android:onClick="addPenaltyForTeamB"
                android:text="@string/penalty3" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/imageWH"
        android:layout_height="@dimen/imageWH"
        android:layout_above="@+id/resetbutton"
        android:layout_centerHorizontal="true"
        android:src="@drawable/rugbyball" />

    <Button
        android:id="@+id/resetbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/resetMargin"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>